feat: configure ORCID API integration and update environment settings
- Updated .env.example with new ORCID API configuration keys.
- Changed ASP.NET Core URL port in docker-compose.yml from 8080 to 7034.
- Added ORCID settings in appsettings.Development.json for API integration.
- Configured HttpClient for ORCID API in Program.cs with appropriate headers and timeout.
- Registered IOrcidService in the dependency injection container.
- Updated AcadEventsDbContext to include new properties for token management in PerfilORCID model.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # ORCID API Configuration (Sandbox)
-ORCID__CLIENT_ID=
-ORCID__CLIENT_SECRET=
-ORCID__AUTHORIZATION_ENDPOINT=
-ORCID__TOKEN_ENDPOINT=
-ORCID__API_BASE_URL=
-ORCID__REDIRECT_URI=
-ORCID__SCOPES=
+Orcid__ClientId=
+Orcid__ClientSecret=
+Orcid__AuthorizationEndpoint=
+Orcid__TokenEndpoint=
+Orcid__ApiBaseUrl=
+Orcid__RedirectUri=
+Orcid__Scopes=
