--- a/AcadEvents/appsettings.Development.json
+++ b/AcadEvents/appsettings.Development.json
@@ -2,6 +2,15 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=AcadEventsDB;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=True;MultipleActiveResultSets=True"
   },
+  "Orcid": {
+    "ClientId": "",
+    "ClientSecret": "",
+    "AuthorizationEndpoint": "https://sandbox.orcid.org/oauth/authorize",
+    "TokenEndpoint": "https://sandbox.orcid.org/oauth/token",
+    "ApiBaseUrl": "https://sandbox.orcid.org/v3.0",
+    "RedirectUri": "https://localhost:8080/api/auth/orcid/callback",
+    "Scopes": "/read-limited /authenticate /activities/update /person/update"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
