feat: integrate email service for user notifications and add MailKit dependency
- Added MailKit package for email functionality.
- Introduced email configuration settings in appsettings.json and appsettings.Development.json.
- Enhanced AutorService, AvaliadorService, OrganizadorService, ComiteCientificoService, EventoService, and SubmissaoService to send welcome and notification emails upon user creation and event updates.
- Implemented error handling for email sending to ensure main workflows are not disrupted.

--- a/AcadEvents/appsettings.Development.json
+++ b/AcadEvents/appsettings.Development.json
@@ -7,5 +7,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Email": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderEmail": "noreply.acadevents@gmail.com",
+    "SenderPassword":"ymtpwqnuqzzpspag",
+    "SenderName": "AcadEvents"
   }
 }
