--- a/AcadEvents/appsettings.json
+++ b/AcadEvents/appsettings.json
@@ -16,5 +16,12 @@
   },
   "FileStorage": {
     "Path": "/app/storage/artigos"
+  },
+  "Email": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderEmail": "noreply.acadevents@gmail.com",
+    "SenderPassword":"ymtpwqnuqzzpspag",
+    "SenderName": "AcadEvents"
   }
 }
