--- a/AcadEvents/AcadEvents.csproj
+++ b/AcadEvents/AcadEvents.csproj
@@ -16,6 +16,7 @@
           <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0" />
+        <PackageReference Include="MailKit" Version="4.8.0" />
         <PackageReference Include="Scalar.AspNetCore.Microsoft" Version="2.10.3" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
     </ItemGroup>
